[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://BebasNeue-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="GuessTime" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Score" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 11.432
margin_top = 601.289
margin_right = 152.432
margin_bottom = 661.289
rect_pivot_offset = Vector2( 58.568, 48.1602 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score : 0"

[node name="BestScore" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 11.432
margin_top = 655.704
margin_right = 152.432
margin_bottom = 715.704
rect_pivot_offset = Vector2( 58.568, 48.1602 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Best Score : 0"

[node name="GameOver" type="Label" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GAME OVER"
align = 1
valign = 1

[node name="RestartGame" type="Timer" parent="."]
pause_mode = 2
wait_time = 2.0

[node name="RemainingTime" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1227.0
margin_top = 680.0
margin_right = 1280.0
margin_bottom = 719.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
[connection signal="timeout" from="GuessTime" to="." method="_on_GuessTime_timeout"]
[connection signal="timeout" from="RestartGame" to="." method="_on_RestartGame_timeout"]
